--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="#home">home</a></li>
                 <li><a href="#about">about</a></li>
                 <li><a href="#education">education</a></li>
-                <li><a href="#portfolio">portfolio</a></li>
+                <li><a href="#portfolio">projects</a></li>
                 <li><a href="#contact">contact</a></li>
                 <h3>made with 💝 by anirudhh</h3>
             </ul>
