--- a/index.html
+++ b/index.html
@@ -175,22 +175,22 @@
 
         <div class="box-container">
 
-            <div class="box layer">
+            <div class="box">
                 <a href="https://anirudhhbehera.github.io/Html-Css-Js-Project/SignUp-SignIn-page/index.html" target="_blank"><img src="images/p1.png" alt=""></a>
             </div>
 
-            <div class="box layer">
+            <div class="box">
                 <a href="https://anirudhhbehera.github.io/Html-Css-Js-Project/sm-button-animation/index.html" target="_blank"><img src="images/p2.png" alt=""></a>
             </div>
 
-            <div class="box layer">
+            <div class="box">
                 <a href="https://anirudhhbehera.github.io/Html-Css-Js-Project/Custom-Captcha-in-JavaScript/index.html" target="_blank"><img src="images/p3.png" alt=""></a>
             </div>
 
-            <div class="box layer">
+            <div class="box">
                 <a href="https://anirudhhbehera.github.io/Html-Css-Js-Project/grade-calcy/index.html" target="_blank"><img src="images/p4.png" alt=""></a>
             </div>
-            <div class="box layer">
+            <div class="box">
                 <a href="https://anirudhhbehera.github.io/News-app-in-react.js" target="_blank"><img src="images/p5.png" alt=""></a>
             </div>
             <div>
@@ -231,7 +231,7 @@
 
             <!-- <form action="">
 
-                <input type="text" placeholder="name" class="box">
+                <input type="text" placeholder="name" class=
                 <input type="email" placeholder="email" class="box">
                 <input type="text" placeholder="Reason" class="box">
                 <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="message"></textarea>
